# BOL-CD

./: .dockerignore  .env  .gitignore  .trivyignore  CHANGELOG.md  Dockerfile  Makefile  README.md  bench.json  bolcd_auth.db  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  env.production  graph.json  pyproject.toml  requirements.txt  setup.sh  splunk-ca.pem  start.sh  tatus  test.db  trivyignores
.github/: pull_request_template.md
api/: openapi.yaml
certs/: bundle.crt  csr.conf  dhparam.pem  saml_signing.crt  sp.crt  sp.csr  sp.key
config/: optimized_rules.json  production_rules.json  siem_config.json  tuning_config.json
configs/: perf-baseline.json  retention.yaml  saml.yaml  scim.yaml  segments.yaml  sla.yaml  thresholds.yaml  thresholds.yamlZone.Identifier
data/: sample_events.jsonl
doc/: AB-validation-guide.md  ab-ops-guide-ja.md  ab-testing-runbook.md
docs/: ADR-0002-fdr-bh.md  ADR-0004-k-ary-encoding.md  Cursor-Prompts.md  Data-Schema-and-Mapping.md  IdP-Setup-Guide.md  PRD.md  PoC-Playbook.md  Runbook.md  SLO-SLI.md  Sigma-to-Chain.md  Threat-Model-STRIDE.md  alert-workflow.md  api-reference.md  design.md  installation-guide.md  production-readiness-assessment.md  spec-mapping.md  test-plan.md
examples/: rules.opensearch.json  rules.sentinel.json  rules.splunk.json
grafana/: bolcd-ab.json
scripts/: ab_analyzer.py  ab_ml_pipeline.py  ab_optimizer.py  ab_report.py  ab_robust_optimizer.py  ab_tuner.py  ab_validate.py  ab_weekly.py  acceptance_check.py  backup.sh  daily_ab_report.sh  deploy.sh  false_suppression_validator.py  fetch_data.py  generate_certs.sh  generate_realistic_events.py  generate_synth_dataset.py  harvest_splunk.sh  install_prod.sh  k8s-preflight.sh  performance_test.sh  restore.sh  security_scan.sh  siem_connector.py  start_streaming.sh  test_idp_integration.sh  test_splunk_local.py
tests/: conftest.py  test_ab.py  test_ab_metrics.py  test_condensed_api.py  test_connectors.py  test_core.py  test_io_and_graphml.py  test_pipeline.py
tmp/: combined_latest.jsonl
web/: README.md  (+5 more)
(+759 files in other folders)
