[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bolcd"
version = "1.0.0"
description = "ChainLite (BOL-CD) core + API"
readme = "README.md"
authors = [{ name = "BOL-CD Team" }]
requires-python = ">=3.11"
dependencies = []
license = { file = "LICENSE" }
license-files = ["LICENSE"]

[project.scripts]
bolcd-recompute = "bolcd.cli.recompute:main"
bolcd-bench = "bolcd.cli.bench:main"
bolcd-writeback = "bolcd.cli.writeback:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
