[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bolcd"
version = "1.0.0"
description = "ChainLite (BOL-CD) core + API"
readme = "README.md"
authors = [{ name = "BOL-CD Team" }]
requires-python = ">=3.11"
dependencies = []
license = { text = "MIT" }

[project.scripts]
bolcd-recompute = "bolcd.cli.recompute:main"
bolcd-bench = "bolcd.cli.bench:main"
bolcd-writeback = "bolcd.cli.writeback:main"
bolcd-roi = "bolcd.cli.roi:main"
bolcd-sla = "bolcd.cli.sla:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
